--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,24 +1,3 @@
-<% if @article.errors.any? %>
-<ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-</ul>
-<% end %>
+<h1>Edit existing article</h1>
 
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :Naslov %></br>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :Tekst %></br>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit :Objavi %>
-    </p>
-
-<% end %>
-
-<%= link_to "Go back to articles list", articles_path %>
+<%= render "form" %>
